# rtl_buddy

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.claude/skills/audit-bundled-skill/: SKILL.md
.claude/skills/audit-docs/: SKILL.md
.claude/skills/audit-template/: SKILL.md
.github/workflows/: claude.yml  docker.yml  docs.yml  lint.yml  publish.yml  release-on-merge.yml  release.yml
dev/: 404.html  index.html  sitemap.xml
dev/CONTRIBUTING/: index.html
dev/agents/: index.html
dev/concepts/cocotb/: index.html
dev/concepts/coverage/: index.html
dev/concepts/plugins/: index.html
dev/concepts/regressions/: index.html
dev/concepts/root-config/: index.html
dev/concepts/spec-traceability/: index.html
dev/concepts/tests/: index.html
dev/install/: index.html
dev/known-issues/: index.html
dev/migrations/submodule-to-uv/: index.html
dev/migrations/v2-to-v3/: index.html
dev/quickstart/: index.html
dev/reference/cli/: index.html
dev/reference/yaml/: index.html
dev/search/: search_index.json
docker/: Dockerfile
docker/scripts/: resolve_supported_versions.py  test_resolve_supported_versions.py
docs/: CONTRIBUTING.md  agents.md  index.md  install.md  known-issues.md  quickstart.md  testing-policy.md
docs/concepts/: cocotb.md  coverage.md  plugins.md  regressions.md  root-config.md  spec-traceability.md  tests.md
docs/migrations/: submodule-to-uv.md  v2-to-v3.md
docs/reference/: cli.md  yaml.md
latest/: 404.html  index.html
latest/CONTRIBUTING/: index.html
latest/agents/: index.html
latest/concepts/cocotb/: index.html
latest/concepts/coverage/: index.html
latest/concepts/plugins/: index.html
latest/concepts/regressions/: index.html
latest/concepts/root-config/: index.html
latest/concepts/spec-traceability/: index.html
latest/install/: index.html
latest/known-issues/: index.html
latest/quickstart/: index.html
scripts/: check_docs_frontmatter.py  gen_cli_reference.py  gen_docs_resource.py
src/rtl_buddy/: __init__.py  __main__.py  docs_access.py  docs_data.json  errors.py  logging_utils.py  rtl_buddy.py  seed_mode.py  skill_install.py
tests/: test_cocotb_post.py  test_coverage_paths.py  test_docs_access.py  test_logging.py  test_setup_failures.py  test_skill_install.py  test_vlog_sim_paths.py
v2/: 404.html  index.html  sitemap.xml
v2/agents/: index.html
v2/install/: index.html
v2/known-issues/: index.html
v2/quickstart/: index.html
v3/: 404.html  index.html  sitemap.xml
v3/CONTRIBUTING/: index.html
v3/agents/: index.html
v3/install/: index.html
v3/known-issues/: index.html
v3/quickstart/: index.html
v3/search/: search_index.json
(+54 files in other folders)
